--- a/lectures/wigner_cats.ipynb
+++ b/lectures/wigner_cats.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Prerequisite to this tutorial is finishing the `wigner_semicircle.ipynb` tutorial first for a background. \n",
     "\n",
-    "In this lecture we will generate a mixed ensemble. A mixed ensemble implies different order matrices at a given `degree of mixture` (DoM). DoMs are a principled way to generate those different order matrices. "
+    "In this lecture we will generate a mixed ensemble. A mixed ensemble implies different order matrices at a given `degree of mixture` (DoM). DoMs are a principled way to generate those different order matrices via `Mixed Matrix Ensemble Sampling (MMES) algoritm`. [suzen21]. "
    ]
   },
   {
@@ -27,7 +27,7 @@
     "`goe` : Gaussian Orthogonal Matrix generator.   \n",
     "`mixed_ensemble`: Ensemble generator, for mixed ensemble.  \n",
     "`empirical_spectral_density`: Compute eigenvalues and their density $\\rho(\\lambda)$.     \n",
-    "`wigner`: Compute the Wigner density at a given $\\lambda$.\n",
+    "`wigner`: Compute the Wigner density.\n",
     "\n",
     "See each method's documentation for more details. "
    ]
@@ -41,9 +41,10 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from leymosun.gaussian import goe\n",
+    "from leymosun.gaussian import goe, wigner\n",
     "from leymosun.matrix import mixed_ensemble \n",
-    "from leymosun.spectral import empirical_spectral_density, wigner\n",
+    "from leymosun.spectral import empirical_spectral_density\n",
+    "from leymosun.stats import bootstrap_observed_matrix_ci\n",
     "import leymosun\n",
     "leymosun.__version__"
    ]
@@ -57,7 +58,7 @@
     "\n",
     "A mixed matrix ensemble is formed by choosing different sized matrices. Recent work on this demonstrated [Suzen21] a principled way of generating a mixed ensemble. After setting a reference $N$ matrix order, generating mixed-sizes from a Binomial distribution with re-interpretation of the probability of success as the degree of mixture. This mixture defines which new matrix orders to generate and how many.  \n",
     "\n",
-    "The idea is to get a new matrix order $N_{i}$ at the reference matrix order $N_{ref}$ via binomimal distribution at the given probability-so called the Degree-of-Mixture (DoM) $\\mu$: $N_{i} \\sim Bin(N_{ref}, \\mu)$. Repeating this procedure with the ensemble size $M$ will generate the mixed ensembles matrix-orders we should generate. `mixed_ensemble` method from `leymosun` exactly do this.  "
+    "`Mixed Matrix Ensemble Sampling (MMES)`: The idea is to get a new matrix order $N_{i}$ at the reference matrix order $N_{ref}$ via binomimal distribution at the given probability-so called the Degree-of-Mixture (DoM) $\\mu$: $N_{i} \\sim Bin(N_{ref}, \\mu)$. Repeating this procedure with the ensemble size $M$ will generate the mixed ensembles matrix-orders we should generate. `mixed_ensemble` method from `leymosun` exactly do this.  "
    ]
   },
   {
@@ -103,9 +104,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, empirical_density, elocations = empirical_spectral_density(\n",
-    "    ensemble_sample, mixed_order=matrix_order, scale=\"wigner\"\n",
+    "eigenvalues, densities, locations = empirical_spectral_density(\n",
+    "    ensemble_sample, mmes_order=matrix_order, scale=\"wigner\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57aeef26",
+   "metadata": {},
+   "source": [
+    "We want to report 95% confidence intervals. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afd55df4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observed_mean, observed_upper, observed_lower = bootstrap_observed_matrix_ci(densities)"
    ]
   },
   {
@@ -123,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dwigner = wigner(elocations, domain_boundary=2.0)"
+    "dwigner = wigner(locations, domain_boundary=2.0)"
    ]
   },
   {
@@ -131,7 +150,7 @@
    "id": "ce4b8bcf",
    "metadata": {},
    "source": [
-    "Now plotting the densities, we observer the \"Cat\" at the degree of mixture $\\mu=0.8$."
+    "Now plotting the densities, we observer the `Wigner's Cat` (`M-shaped`) desity at the degree of mixture $\\mu=0.8$."
    ]
   },
   {
@@ -141,9 +160,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.bar(elocations, empirical_density, width=0.08, alpha=0.6, align='center')\n",
-    "plt.plot(elocations, dwigner, color='red')\n",
-    "plt.title(\"Wigner's Semicircle law with Leymosun \\n with Wigner's cat at $\\mu=0.8$ \")\n",
+    "yerr = np.array([observed_mean-observed_lower, observed_upper-observed_mean])\n",
+    "plt.bar(locations, observed_mean, width=0.02, alpha=0.3, align='center') \n",
+    "plt.errorbar(locations, observed_mean, yerr=yerr, fmt=' ', capsize=5)  \n",
+    "plt.title(\"Wigner's Semicircle law with Leymosun \\n with Wigner's cat (M-shaped) density at $\\mu=0.8$ \")\n",
     "plt.xlabel(\"Eigenvalue Locations\")\n",
     "plt.ylabel(\"Density\")"
    ]
@@ -168,7 +188,8 @@
     "## Reference\n",
     "\n",
     "[Suzen21] Empirical deviations of semicircle law in mixed-matrix ensembles, M. Suzen\n",
-    "hal-03464130 (2021) [url](https://hal.science/hal-03464130)"
+    "hal-03464130 (2021) [url](https://hal.science/hal-03464130)    \n",
+    "`Introduction of mixed matrix ensembles and MMES algorithm with M-shaped (Wigner's Cat) density.`"
    ]
   }
  ],
