--- a/lectures/wigner_semicircle.ipynb
+++ b/lectures/wigner_semicircle.ipynb
@@ -10,7 +10,7 @@
     "    by M.Süzen\n",
     "    (c) 2025\n",
     "\n",
-    "In this lecture, we will generate the spectral density $ \\rho(\\lambda)$ emprically from a sample of matrices sampled from the Gaussian Orthogonal Ensemble (GOE) and compare against the exact solution for it's distribution using the `nicosia` package."
+    "In this lecture, we will generate the spectral density $ \\rho(\\lambda)$ emprically from a sample of matrices sampled from the Gaussian Orthogonal Ensemble (GOE) and compare against the exact solution for it's distribution using the `leymosun` package."
    ]
   },
   {
@@ -25,7 +25,7 @@
     "`goe` : Gaussian Orthogonal Matrix generator.   \n",
     "`ensemble`: Ensemble generator.   \n",
     "`offdiagonal`: Extract offdiagonal elements from a square matrix.   \n",
-    "`get_density`: This computes density for given values and equidistant location centres.  \n",
+    "`pdf`: This computes density for given values and equidistant location centres.  \n",
     "`empirical_spectral_density`: Compute eigenvalues and their density $\\rho(\\lambda)$.     \n",
     "`wigner`: Compute the Wigner density at a given $\\lambda$.\n",
     "\n",
@@ -39,12 +39,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import leymosun\n",
-    "from leymosun.gaussian import goe\n",
+    "from leymosun.gaussian import goe, wigner\n",
     "from leymosun.matrix import ensemble, offdiagonal\n",
-    "from leymosun.spectral import get_density, empirical_spectral_density, wigner\n",
+    "from leymosun.spectral import pdf, empirical_spectral_density\n",
+    "from leymosun.stats import bootstrap_observed_matrix_ci\n",
     "\n",
     "leymosun.__version__"
    ]
@@ -71,7 +73,7 @@
     "\n",
     "**Exercise 1** How come diagonal have a different variance?\n",
     "\n",
-    "Let's try to generate 100x100 matrix as an example and verify its properties with `nicosia`, where $sigma=1.0$ is the default value."
+    "Let's try to generate 100x100 matrix as an example and verify its properties with `leymosun`, where $\\sigma=1.0$ is the default value."
    ]
   },
   {
@@ -107,10 +109,10 @@
    "outputs": [],
    "source": [
     "locations = np.arange(-5.0, 5.2, 0.2) \n",
-    "density_diag, _ = get_density(A_diag, locations)\n",
-    "density_offdiag, _ = get_density(A_offdiag, locations)\n",
-    "plt.plot(locations, density_diag, label=\"Diagonal distribution\")\n",
-    "plt.plot(locations, density_offdiag, label=\"Offdiagonal distribution\")\n",
+    "density_diag, _locations = pdf(A_diag, locations)\n",
+    "density_offdiag, _locations = pdf(A_offdiag, locations)\n",
+    "plt.plot(_locations, density_diag, label=\"Diagonal distribution\")\n",
+    "plt.plot(_locations, density_offdiag, label=\"Offdiagonal distribution\")\n",
     "plt.xlabel(\"GOE diagonal element values\")\n",
     "plt.ylabel(\"GOE diagonal element density\")\n",
     "plt.legend()"
@@ -125,7 +127,7 @@
     "\n",
     "The semicircle law traces its origins to Wigner's work on the calculations of the quantum mechanical Hamiltonian [Wigner55]. The resulting distribution of the eigenvalues follows the so-called semicircle law. The probability density reads as follows:\n",
     "$$ \\rho(\\lambda) = \\frac{2}{\\pi \\cdot R^{2}} \\sqrt{R^{2}-\\lambda^{2}}$$\n",
-    "where by $\\lambda$ is the eigenvalue. This density is a semicircle in between $[-R, R]$. \n"
+    "where by $\\lambda$ is the eigenvalue. This density is a semicircle in between $[-R, R]$, R is $2 \\cdot \\sigma$. \n"
    ]
   },
   {
@@ -135,7 +137,7 @@
    "source": [
     "## Numerical Experiment\n",
     "\n",
-    "We conduct out numerical experiment using the tools provided by `nicosia` package. Emprical GOE ensemble of size 100 is generated for square matrices of 1000 by 1000. Then we compute the empirical spectral density in between $[-2,2]$. "
+    "We conduct out numerical experiment using the tools provided by `leymosun` package. Emprical GOE ensemble of size 100 is generated for square matrices of 1000 by 1000. Then we compute the empirical spectral density in between $[-2,2]$. "
    ]
   },
   {
@@ -157,9 +159,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, empirical_density, elocations = empirical_spectral_density(\n",
-    "    ensemble_sample, scale=\"wigner\"\n",
+    "eigenvalues, densities, locations = empirical_spectral_density(\n",
+    "    ensemble_sample, scale=\"wigner\",  locations = np.arange(-2.05, 2.1, 0.05),\n",
+    "\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57ef8fdb",
+   "metadata": {},
+   "source": [
+    "We will compute 95% confidence intervals. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d561045d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observed_mean, observed_upper, observed_lower = bootstrap_observed_matrix_ci(densities)"
    ]
   },
   {
@@ -169,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dwigner = wigner(elocations, domain_boundary=2.0)"
+    "dwigner = wigner(locations, domasigmin_boundary=2.0)"
    ]
   },
   {
@@ -189,8 +210,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.bar(elocations, empirical_density, width=0.08, alpha=0.6, align='center')\n",
-    "plt.plot(elocations, dwigner, color='red')\n",
+    "yerr = np.array([observed_mean-observed_lower, observed_upper-observed_mean])\n",
+    "plt.bar(locations, observed_mean, width=0.02, alpha=0.3, align='center') \n",
+    "plt.errorbar(locations, observed_mean, yerr=yerr, fmt=' ', capsize=5)  \n",
+    "plt.plot(locations, dwigner, color='red')\n",
     "plt.title(\"Wigner's Semicircle law with Leymosun\")\n",
     "plt.xlabel(\"Eigenvalue Locations\")\n",
     "plt.ylabel(\"Density\")"
@@ -214,7 +237,7 @@
     "We observe good match for demonstration purposes here. One can study how close they get with different generated ensemble size and matrix orders.  \n",
     "\n",
     "**Exercise 2** Conduct numerical experiments to demonstrate semicircle-law as in above, but using the domain [-3.5, -3.5].  \n",
-    "**Hint** Use `partial` function for `goe` to set the `scale` accordingly.\n",
+    "**Hint** Use `partial` function for `goe` to set the `scale` ($\\sigma$) accordingly.\n",
     "\n",
     "## Reference\n",
     "\n",
