Implement NNSD resolved #4

--- a/lectures/wigner_dyson_spacing.ipynb
+++ b/lectures/wigner_dyson_spacing.ipynb
@@ -42,7 +42,7 @@
     "import leymosun\n",
     "from leymosun.gaussian import goe, wigner_spacing\n",
     "from leymosun.matrix import ensemble\n",
-    "from leymosun.spectral import empirical_spectral_density, unfold_spectra\n",
+    "from leymosun.spectral import empirical_spectral_density, unfold_spectra, nnsd\n",
     "from leymosun.stats import pdf, bootstrap_observed_matrix_ci\n",
     "\n",
     "\n",
@@ -113,14 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nn_spacing = []\n",
-    "locations = np.arange(0.0, 5.0, 0.1) # NNSD locations\n",
-    "nnsd_densities = []\n",
-    "for eigenvalue in eigenvalues:\n",
-    "    ueigenvalue,  ueigenvalues_nn, _ = unfold_spectra(eigenvalue, deg_max=30, iqr=True)\n",
-    "    density, _locations = pdf(ueigenvalues_nn, locations=locations)\n",
-    "    nnsd_densities.append(density)\n",
-    "swigner = wigner_spacing(_locations)"
+    "nnsd_densities, locations = nnsd(eigenvalues)\n",
+    "observed_mean, observed_upper, observed_lower = bootstrap_observed_matrix_ci(np.array(nnsd_densities))\n"
    ]
   },
   {
@@ -130,7 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "observed_mean, observed_upper, observed_lower = bootstrap_observed_matrix_ci(np.array(nnsd_densities))"
+    "\n",
+    "swigner = wigner_spacing(locations)"
    ]
   },
   {
@@ -151,13 +146,13 @@
    "outputs": [],
    "source": [
     "yerr = np.array([observed_mean-observed_lower, observed_upper-observed_mean])\n",
-    "plt.bar(_locations, observed_mean, width=0.02, alpha=0.3, align='center') \n",
-    "plt.errorbar(_locations, observed_mean, yerr=yerr, fmt=' ', capsize=5)  \n",
-    "plt.plot(_locations, swigner, color='red')\n",
+    "plt.bar(locations, observed_mean, width=0.02, alpha=0.3, align='center') \n",
+    "plt.errorbar(locations, observed_mean, yerr=yerr, fmt=' ', capsize=5)  \n",
+    "plt.plot(locations, swigner, color='red')\n",
     "\n",
     "plt.title(\"Wigner-Dyson  Neareast-Neigbour \\n Distribution \\n  Unfolding GOE with Leymosun\")\n",
     "plt.xlabel(\"Unfolded Spectrum Locations\")\n",
-    "plt.ylabel(\"Neareast-neighbour Density\")"
+    "plt.ylabel(\"Neareast-neighb:our Density\")"
    ]
   },
   {
