--- a/lectures/wigner_semicircle.ipynb
+++ b/lectures/wigner_semicircle.ipynb
@@ -190,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dwigner = wigner(locations, domasigmin_boundary=2.0)"
+    "dwigner = wigner(locations, domain_boundary=2.0)"
    ]
   },
   {
