--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+v0.2.43
+
+* Fix image `effect_unfolding.png` under assets.
+* README: Addition of new citation and video link.
+
 v0.2.42
 
 * `README.md`: 
